<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.wmlynar</groupId>
	<artifactId>jy2-parent</artifactId>
	<version>0.0.7</version>
	<packaging>pom</packaging>
	<name>Jyroscope2</name>
	<description>Next version of Jyroscope ROS Java client.</description>
	<url>https://github.com/wmlynar/jyroscope2</url>
	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<id>wmlynar</id>
			<name>Wojciech Mlynarczyk</name>
		</developer>
		<developer>
			<id>pacinpm</id>
			<name>Marcin Wieczorek</name>
		</developer>
	</developers>
	<scm>
		<connection>scm:git:git://github.com/wmlynar/jyroscope2.git</connection>
		<developerConnection>scm:git:ssh://github.com:wmlynar/jyroscope2.git</developerConnection>
		<url>http://github.com/wmlynar/jyroscope2/tree/master</url>
	</scm>
	<modules>
		<module>jy2-api</module>
		<module>jy2-base</module>
		<module>jy2-core</module>
		<module>jy2-qdox</module>
		<module>jy2-maven-plugin</module>
		<module>jy2-messages</module>
		<module>jy2-example</module>
		<module>jy2-di</module>
		<module>jy2-di-example</module>
		<module>jy2-tf-lib</module>
		<module>jy2-tool</module>
		<module>jy2-launch</module>
		<module>jy2-sm-lib-messages</module>
		<module>jy2-sm-lib</module>
		<module>jy2-sm-lib-example</module>
		<module>jy2-sm-lib-ui</module>
		<module>jy2-uberjar-libs</module>
		<module>jy2-uberjar-example</module>
	</modules>
	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<jy2.assemble.directory>/opt/jy2</jy2.assemble.directory>
		<!-- flat layout for shorter classpath string -->
		<jy2.assemble.repository.layout>flat</jy2.assemble.repository.layout>
		<jy2.assemble.max.memory>256M</jy2.assemble.max.memory>
		<jy2.assemble.use.timestamp>false</jy2.assemble.use.timestamp>
	</properties>
	<dependencies>
		<!-- testing -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.7</version>
				<configuration>
					<generateBackupPoms>false</generateBackupPoms>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.amashchenko.maven.plugin</groupId>
				<artifactId>gitflow-maven-plugin</artifactId>
				<version>1.14.0</version>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8.2</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<pluginRepositories>
		<pluginRepository>
			<id>oss.sonatype.org</id>
			<url>https://oss.sonatype.org/content/groups/public</url>
		</pluginRepository>
	</pluginRepositories>
	<profiles>
		<profile>
			<id>deploy</id>
			<build>
				<pluginManagement>
					<plugins>
						<plugin>
							<artifactId>maven-deploy-plugin</artifactId>
							<configuration>
								<skip>true</skip>
							</configuration>
						</plugin>
					</plugins>
				</pluginManagement>
				<plugins>
					<plugin>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.2.1</version>
						<executions>
							<execution>
								<id>package-sources</id>
								<configuration>
									<forceCreation>true</forceCreation>
								</configuration>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.2.0</version>
						<executions>
							<execution>
								<id>package-javadoc</id>
								<phase>package</phase>
								<goals>
									<goal>jar</goal>
								</goals>
								<configuration>
									<doclint>none</doclint>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.6</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>1.6.8</version>
						<extensions>true</extensions>
						<configuration>
							<serverId>ossrh</serverId>
							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
							<description>${project.version}</description>
						</configuration>
						<executions>
							<execution>
								<id>deploy-to-sonatype</id>
								<phase>deploy</phase>
								<goals>
									<goal>deploy</goal>
									<goal>release</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
			<distributionManagement>
				<repository>
					<id>ossrh</id>
					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
				</repository>
				<snapshotRepository>
					<id>ossrh</id>
					<url>https://oss.sonatype.org/content/repositories/snapshots</url>
				</snapshotRepository>
			</distributionManagement>
		</profile>
	</profiles>
</project>
